--- a/_posts/2020-07-22-yixian.md
+++ b/_posts/2020-07-22-yixian.md
@@ -10,7 +10,7 @@ featured_image: /assets/images/posts/zhenyuanlong.png
 
 This post will be the first in a series of biome profiles, intended to depict an ancient time and place as a whole, comprehensive, living ecosystem.  There are many impressive fossil localities that preserve tons of information about all levels of the environment, but most often, vertebrate fossils get an outsized chunk of the attention, and are observed in a vacuum.  Hopefully this series will help to remedy that, and give you a better idea of how certain ancient ecosystems functioned, and what it would’ve been like to be there.
 
-The Yixian Formation is a **Lagerstatte** (fossil location with exceptional preservation) in northeastern China containing fossils from the Early Cretaceous period (129.7-122.1 million years ago).  Paleontologists only began studying the fossils from Yixian in the ‘90s, and the numerous examples of preserved feathers helped to radically change the perception of dinosaurs during that time.  Today, it continues to produce amazing new discoveries--it’s the home of such fan favorites as Yutyrannus the feathered tyrant, Sinosauropteryx the red panda mimic, and Liaoningosaurus the tiny semi-aquatic ankylosaur.
+The Yixian Formation is a **Lagerstatte** (fossil location with exceptional preservation) in northeastern China containing fossils from the Early Cretaceous period (129.7-122.1 million years ago).  Paleontologists only began studying the fossils from Yixian in the ‘90s, and the numerous examples of preserved feathers they unearthed helped to radically change the perception of dinosaurs during that time.  Today, it continues to produce amazing new discoveries--it’s the home of such fan favorites as *Yutyrannus* the feathered tyrant, *Sinosauropteryx* the red panda mimic, and *Liaoningosaurus* the tiny semi-aquatic ankylosaur.
 
 In the Early Cretaceous, Yixian was a lake surrounded by forest.  The climate was temperate, with strong seasonal changes including snow in the winter.  The lake was nutrient-rich and was full of plankton, and supported many types of filter-feeders, including the prolific little fish *Lycoptera* as well as ctenochasmatid pterosaurs (more on them later).  Other fish present include ancestral cousins of today’s paddlefish, sturgeon, bowfin fish, and lamprey (fossil genera *Protopsephurus*, *Peipiaosteus*, *Sinamia*, and *Mesomyzon*, respectively).  The invertebrate residents would also have looked familiar, with crabs, shrimp, snails, spiders, stick insects, wasps, beetles, and dragonflies living in and around the lake.
 
@@ -34,7 +34,7 @@ Above: *Liaoningotitan* was modestly sized compared to later titanosauriformes, 
 
 ![Bolong](/assets/images/posts/bolong.jpg)
 
-*Bolong* (above) and related hadrosauroid *Jinzhousaurus* (below) were cow-sized grazers.  Both are known from full skeletons, and while they both had the defensive thumb spike common to iguanodontians, *Bolong* was more quadrupedal while *Jinzhousaurus* was facultatively bipedal.
+*Bolong* (above) and related hadrosauroid *Jinzhousaurus* were cow-sized grazers.  Both are known from full skeletons, and while they both had the defensive thumb spike common to iguanodontians, *Bolong* was more quadrupedal while *Jinzhousaurus* was facultatively bipedal.
 
 The role of small herbivore in Yixian would’ve been played by the basal ceratopsians (horned face dinosaurs), the cat-sized *Liaoceratops* and the famous, slightly larger *Psittacosaurus*.
 
@@ -44,7 +44,7 @@ Above: An unfortunate *Liaoceratops* gets jumped by a hungry *Zhenyuanlong* (mor
 
 ![Psittaco](/assets/images/posts/psittaco.jpg)
 
-Above: *Psittacosaurus*, a basal ceratopsian known from a ludicrous amount of fossil material.  It has the most named species of any non-avian dinosaur (12), is one of the few non-feathered dinosaurs whose color is known in detail, and many details of its lifestyle and ontogeny are well understood.  Maybe I’ll do a dinosaur profile on it later (though it would definitely be a stretch to call this one “obscure”)!
+Above: *Psittacosaurus*, a basal ceratopsian known from a ludicrous amount of fossil material.  It has the most named species of any non-avian dinosaur (12), is one of the few non-feathered dinosaurs whose color is known in detail, and many details of its lifestyle and ontogeny are well understood.  Maybe I’ll do a dinosaur profile on it later (though it would definitely be a stretch to call this one “obscure”)! [Update: I did one; find it [here](https://obscuredinosaurfacts.com/profile/2020/09/02/psittacosaurus.html).]
 
 In addition to the herbivorous sauropods and ornithischians, there were also a couple of herbivorous theropods in the Yixian biota, including the small basal therizinosaur, *Beipiaosaurus*, the tiny basal ornithomimosaur, *Hexing*, and the rodent-like basal oviraptorosaur, *Incisivosaurus*.  At the time of its discovery in 1999, *Beipiaosaurus* was the largest dinosaur known to sport a full fluffy coat, and through melanosome analysis we know that it was dark brown, at least on the back of the neck.
 
@@ -63,7 +63,7 @@ Therizinosaurs, ornithomimosaurs, and oviraptorosaurs would all become much more
 
 ### Carnivores
 
-Many varied sizes of terrestrial carnivores, mainly theropods but also some early mammals, coexisted in Yixian.  The apex predator of the ecosystem was the famous *Yutyrannus*, a basal tyrannosaur, which at 4 tonnes is currently the largest known dinosaur to have had a full coat of fluff.
+Many varied sizes of terrestrial carnivores, mainly theropods but also some early mammals, coexisted in Yixian.  The apex predator of the ecosystem was the famous *Yutyrannus*, a basal tyrannosaur, which, at 4 tonnes is currently the largest known dinosaur to have had a full coat of fluff.
 
 ![Yutyrannus](/assets/images/posts/yutyrannus.jpg)
 
@@ -95,7 +95,7 @@ Above: A mother *Caudipteryx*, a small early oviraptorosaur, herds her chicks ac
 
 ![Graciliraptor](/assets/images/posts/graciliraptor.png)
 
-Above: another microraptorine, *Graciliraptor*, takes a sunbath in some ferns.
+Above: another microraptorine, *Graciliraptor*, sunbathing amongst the ferns.
 
 ![Sinosauropteryx](/assets/images/posts/sinosauro.jpg)
 
