--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -151,7 +151,7 @@ In terms of style, I was trying to use comic-book-like dramatic shading and spee
 
 \*Sad deinocheirid noises\*
 
-*Paraxenisaurus* was a probable deinocheirid dinosaur from Late Cretaceous Mexico.  The deinocheirids were an enigmatic group of duck-billed hump-backed giant ornithomimosaurs whose existence was known since 1965 but didn't have all their puzzle piece body parts put together until 2014.  While *Deinocheirus* was far too big at 6.4 tonnes to have had a heavy feather coat, *Paraxenisaurus* was only a tenth of the size, so I've given it a bearlike shaggy pelage.
+*Paraxenisaurus* was a probable deinocheirid dinosaur from Late Cretaceous Mexico.  The deinocheirids were an enigmatic group of duck-billed hump-backed giant ornithomimosaurs whose existence was known since 1965 but didn't have all their puzzle piece body parts put together until 2014.  While *Deinocheirus* was far too big at 6.4 tonnes to have had a heavy feather coat, *Paraxenisaurus* was only a tenth of that size, so I've given it a bearlike shaggy pelage.
 
 Primitive feathers would not have been nearly as good as modern birds' feathers at repelling water, so under stormy conditions certain dinosaurs would have gotten uncomfortably soaked.  I'm quite proud of how Eeyore-esque he looks.
 
@@ -197,7 +197,7 @@ I guess drawing dinosaurs from front or back view is another theme this Inktober
 
 Thank goodness for *Gnathomortis*!  I was worried we weren't going to see any new mosasaur genera this year, but this guy was named just in time for Inktober!
 
-Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of snakes, that made the transition to a fully aquatic lifestyle in the Late Cretaceous period.  Like other marine reptiles, they would have been streamlined rather than scaly, warm-blooded, and given live birth tail first.  Unlike other marine reptiles, they were still *lizards*, and therefore would have had forked tongues, "forked" penises, a pineal (third) eye on top of their head, and would have shed their skin.  Imagine huge discarded mosasaur skins washing up on the beach!  What a sight to see.
+Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of snakes, that made the transition to a fully aquatic lifestyle in the Late Cretaceous period.  Like other marine reptiles, they would have been streamlined rather than scaly, warm-blooded, and given live birth tail first.  Unlike other marine reptiles, they were still *lizards*, and therefore would have had forked tongues, "forked" penises, a pineal (third) eye on top of their head, and would have shed their skin.  Imagine huge discarded mosasaur skins washing up on the beach!  What a sight to see. [Update: I have learned that whales actually shed large portions of their skin at once, a strategy that helps prevent skin infection.  The shed skin is almost immediately set upon by ocean scavengers and are rare to actually find.  So perhaps mosasaur skins would have been similarly rapidly consumed.]
 
 I was inspired by my fellow paleo Inktober participant, u/jupiter1390, who on Day 2 did a beautiful depiction of bioluminescent squid using white ink.  I asked what kind of white pen they used, ordered them, and here we are.  It'll take some getting used to, but I'm happy with how this one turned out at least!
 
