--- a/_posts/2020-11-11-concepts.md
+++ b/_posts/2020-11-11-concepts.md
@@ -16,7 +16,7 @@ The Boring Billion was a period of time from about 1.8 billion to 0.8 billion ye
 What was actually going on during this period was that all the oxygen produced by the cyanobacteria was being absorbed into the oceans and rocks, with very little making it into the atmosphere.  Finally, around 0.85 billion years ago, the oxygen reserves of the planet were filled and gaseous oxygen was able to exist in the atmosphere, allowing many more diverse eukaryotes to evolve, including the first animals.  However, many single-celled organisms were adapted to the oxygen-poor environment, and died out in a mass extinction known as the Great Oxidation Event, with the only survivors continuing to eke out a living in extreme environments such as deep-sea trenches and salt flats.
 
 #### Romer's Gap
-Romer's Gap is a period of time from about 360 to 345 million years ago, spanning the Early Carboniferous Period, from which there are very few fossils known.  For a long time, it was debated whether the gap was caused by poor fossilization conditions during that time period, actual low populations of animals that were recovering from the end-Devonian extinction, or if we just hadn't looked in the right places yet.  Recently, stem-tetrapod remains from Scotland have been found within the gap, indicating the third option is likely, but the second also probably plays a role.
+Romer's Gap is a period of time from about 360 to 345 million years ago, spanning the Early Carboniferous Period, from which there are very few fossils known.  It was named after paleontologist Alfred Romer (1894-1973), who first noticed it.  For a long time, it was debated whether the gap was caused by poor fossilization conditions during that time period, actual low populations of animals that were recovering from the end-Devonian extinction, or if we just hadn't looked in the right places yet.  Recently, stem-tetrapod remains from Scotland have been found within the gap, indicating the third option is likely, but the second also probably plays a role.
 
 The fossil ecosystems recovered before the gap are full of placoderms, early "fishapods" like the -stegas (*Acanthostega*, *Ichthyostega*, etc), and relatively simple terrestrial plants and arthropods, while those after the gap are way more modern, with complex forests full of specialized amphibians, arthropods, and trees.  Figuring out what happened in Romer's Gap has been a slow process that is still ongoing.
 
@@ -33,7 +33,7 @@ But why? It has something to do with the way creating a limb out of a fin happen
 
 Above: the skeleton of an anglerfish, showing the many confusing bones that make up its skull, as well as the many ray bones that make up its pectoral fin.
 
-For awhile it was unknown whether amniotes (reptiles and mammals) and amphibians convergently arrived at five digits, or if we all evolved from a five-fingered ancestor; now the consensus favors the latter.  While it does seem like the stem-tetrapods themselves were trending toward fewer digits as they became more terrestrial, the fact that the reduction happened only once indicates that maybe our five digits only happened by chance.
+Modern amphibians only have four fingers on their front limbs and five in the back, while the ancestral condition of amniotes (reptiles and mammals) was five on each limb (although this number has been secondarily reduced in many groups such as horses, cows, and birds).  For awhile it was unknown whether amniotes and amphibians both evolved from a five-fingered ancestor, or if four fingers was the amphibian ancestral condition as well; [new evidence](https://www.sciencedaily.com/releases/2020/07/200724191444.htm) favors the former.  While it does seem like the stem-tetrapods themselves were trending toward fewer digits as they became more terrestrial, the fact that all modern tetrapods have the same ancestral number of fingers indicates that maybe our five digits only happened by chance.
 
 #### The Arthropod Head Problem
 Arthropods (insects, crustaceans, arachnids, trilobites, and other hard-shelled, many-legged creatures) are an ancient and diverse group of animals, whose evolutionary relationships and development are still somewhat mysterious.  The arthropod head problem, also known as the "endless dispute," is an ongoing debate about how different groups of arthropods' head parts are related to one another.  Ancestral arthropods are thought to have been simple, segmented creatures, rather like worms, and over time some of the segments specialized or fused into the body parts we see today.  The arthropod head problem involves determining, through studying modern arthropod embryos and genetics, which segments in one group correspond to which in another.
