--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -74,7 +74,7 @@ Yep, this is getting out of control.  Speculative evolution + dinosaurs + junk f
 
 *Mymoorapelta* was a basal nodosaur from Late Jurassic Colorado.  Ankylosaurs would become the dominant armored herbivores later in the Cretaceous Period, but in the Jurassic they lived in the shadow of the abundant stegosaurs.  This is the first one where the cookie is horizontal relative to the animal.  I think he turned out looking pretty yummy, but not that much like a MoonPie.
 
-Here's some flavor text for the series: *Orodromeus*'s large litter size and short generation time allow it to evolve rapidly, resulting in many variants in the wild, especially leading up to winter when predators are more active as they prepare for hibernation.  Breeders took advantage of these traits to create all kinds of breeds that should never have existed, like "Caramal Apple" and "Most Stuf" (the latter of which are almost always born with horrible deformities).  On the other extreme, *Muttaburrasaurus*'s natural diet consists exclusively of fabaceous plants; it sequesters toxins from these in its dry, flaky skin to deter predators.  This, combined with the difficulties presented by its specialized diet and low reproduction rate, means that it has resisted attempts at domestication despite its tastiness.
+Here's some flavor text for the series: *Orodromeus*'s large litter size and short generation time allow it to evolve rapidly, resulting in many variants in the wild, especially leading up to winter when predators are more active as they prepare for hibernation.  Breeders took advantage of these traits to create all kinds of breeds that should never have existed, like "Caramel Apple" and "Most Stuf" (the latter of which are almost always born with horrible deformities).  On the other extreme, *Muttaburrasaurus*'s natural diet consists exclusively of fabaceous plants; it sequesters toxins from these in its dry, flaky skin to deter predators.  This, combined with the difficulties presented by its specialized diet and low reproduction rate, means that it has resisted attempts at domestication despite its tastiness.
 
 ![revueltosaurus](/assets/images/posts/revuelto.png)
 
