--- a/_posts/2021-06-02-shuvuuia.md
+++ b/_posts/2021-06-02-shuvuuia.md
@@ -68,8 +68,8 @@ I used to think scleral ring studies were not to be trusted because they predict
 
 ### Image credits
 
-[Shuvuuia egg thief](https://www.deviantart.com/hodarinundu/art/The-Real-Egg-Robber-763879820)
+[*Shuvuuia* egg thief](https://www.deviantart.com/hodarinundu/art/The-Real-Egg-Robber-763879820)
 
-[Shuvuuia low poly](https://www.deviantart.com/kuzim/art/Revamped-Shuviuuia-in-Low-Poly-880102546)
+[*Shuvuuia* low poly](https://www.deviantart.com/kuzim/art/Revamped-Shuviuuia-in-Low-Poly-880102546)
 
-[Shuvuuia pastel](https://www.deviantart.com/paleona/art/Shuvuuia-621446919)
+[*Shuvuuia* pastel](https://www.deviantart.com/paleona/art/Shuvuuia-621446919)
