fixed typos and formatting

--- a/_posts/2021-06-16-dinophoto6.md
+++ b/_posts/2021-06-16-dinophoto6.md
@@ -98,7 +98,7 @@ This is a green heron.  Theoretically we have these in California too, but I've 
 
 ![kestrel](/assets/images/posts/kestrel.jpg)
 
-An American kestrel, the fairy princess of falcons, is dive-bomed by common grackles at the tippy top of a tall tree.  We also have American kestrels in the Central Valley in California, but I've never been able to get a good picture (I guess I still haven't).
+An American kestrel, the fairy princess of falcons, is dive-bombed by common grackles at the tippy top of a tall tree.  We also have American kestrels in the Central Valley in California, but I've never been able to get a good picture (I guess I still haven't).
 
 ![song1](/assets/images/posts/song-1.jpg)
 
