--- a/_posts/2020-11-18-wings.md
+++ b/_posts/2020-11-18-wings.md
@@ -123,7 +123,7 @@ All three groups of flying vertebrates--pterosaurs, birds, and bats--have turned
 
 ![ozimek](/assets/images/posts/ozimek.jpg)
 
-And here are some speculative, powered-flying descendents of the sharovipterygids, called "sharovipterosaurs":
+And here are some speculative, powered-flying descendants of the sharovipterygids, called "sharovipterosaurs":
 
 ![sharovipterosaurs](/assets/images/posts/sharovipterosaurs.jpg)
 
