fixed quotes in quotes

--- a/_posts/2021-09-22-mammal2.md
+++ b/_posts/2021-09-22-mammal2.md
@@ -56,7 +56,7 @@ While the eutriconodonts died out before the non-avian dinosaurs did, the alloth
 
 {% include image-caption.html imageurl="/assets/images/posts/taeniolabis.jpg" title="taeniolabis" caption="The capybara-sized multituberculate Taeniolabis is still diminutive compared to this deceased Triceratops." %}
 
-{% include image-caption.html imageurl="/assets/images/posts/adalatherium.png" title="adalatherium" caption="The badger-sized gondwanathere Adalatherium (meaning "crazy beast") had lots of holes for nerves and blood vessels in the front of its snout, plus a big hole in the top indicating some kind of horn or sensing organ there." %}
+{% include image-caption.html imageurl="/assets/images/posts/adalatherium.png" title="adalatherium" caption="The badger-sized gondwanathere Adalatherium (meaning 'crazy beast') had lots of holes for nerves and blood vessels in the front of its snout, plus a big hole in the top indicating some kind of horn or sensing organ there." %}
 
 This group also includes *Gondwanatherium* and *Sudamerica*, the first animals with high-crowned teeth, which are good for chewing tough foods like grass (which literally contains little grains of sand in its leaves). However, it's a bit of a mystery what they were using these teeth for, since although grasses existed in the Paleocene, they were not widespread until much later. Either these multituberculates lived in special areas with lots of grass, or high-crowned teeth are also useful for processing some other type of food as well.
 
@@ -68,7 +68,7 @@ The last multituberculate known is *Patagonia*, from Miocene, well, Patagonia (A
 
 Symmetrodonts were a group of small carnivore / insectivores from the Cretaceous Period, with just one known member surviving through the K-Pg boundary. This group is possibly **paraphyletic**, but it's still a conceptually useful and commonly used grouping, so I'll use it here.  Some symmetrodonts had venom-delivering spurs on their feet like platypuses, lending support to the theory that this feature is ancestral to all mammals but was later lost.
 
-{% include image-caption.html imageurl="/assets/images/posts/chronoperates.jpg" title="chronoperates" caption="The only (putative) symmetrodont known that survived the asteroid impact, Chronoperates (meaning "time wanderer"), was originally thought to be a super-duper late-surviving non-mammalian cynodont. Here, it shows off its spurs." %}
+{% include image-caption.html imageurl="/assets/images/posts/chronoperates.jpg" title="chronoperates" caption="The only (putative) symmetrodont known that survived the asteroid impact, Chronoperates (meaning 'time wanderer'), was originally thought to be a super-duper late-surviving non-mammalian cynodont. Here, it shows off its spurs." %}
 
 Another notable symmetrodont is *Spalacotherium*, which, while only known from isolated teeth, may be the smallest known mammal to ever live. Its molars were only a quarter of a millimeter across, about half the size of the molars of the smallest comparable mammal today, the Etruscan shrew, which is about five centimeters long (not including the tail) and weighs two grams (less than a dime). That is a *really* small mammal--it's more comparable to most insects!
 
@@ -211,6 +211,8 @@ There's not much left to say about this last group, which includes rodents, rabb
 {% include image-caption.html imageurl="/assets/images/posts/gigantopithecus.jpg" title="gigantopithecus" caption="Gigantopithecus, depicted here as being very orangutan-like." %}
 
 We made it! Sorry this post was a tad late. It got quite a bit longer than I originally anticipated. I hope you have a slightly better idea of how various extant and extinct mammals are related to one another, but if not, I hope you were at least entertained by this roll call of giant animals.
+
+### Image credits
 
 [Kollikodon 1](https://static.wikia.nocookie.net/prehistrico/images/e/ed/110_kollikodon.jpg/revision/latest/scale-to-width-down/380?cb=20170912101647&path-prefix=es)
 [Kollikodon 2](https://i.pinimg.com/originals/e4/df/49/e4df4986709eea8abf9079bbe09d61f2.png)
