--- a/_posts/2021-09-22-mammal2.md
+++ b/_posts/2021-09-22-mammal2.md
@@ -122,13 +122,13 @@ A notable early marsupialiform known from North America in the Late Cretaceous w
 
 Paleontologists often complain that people give a disproportionate amount of attention to **charismatic megafauna** ("Save the pandas!"), while the small, gross, and ugly animals (e.g. bees, bats, frogs, spiders) go neglected even if they're ecologically more important. This is a completely valid point--sorting animals by size, cuteness, or coolness is definitely not a rational way to do science or conservation. Unfortunately, I'm a huge fan of charismatic megafauna. I just can't resist their charismatic allure. So, I apologize for the megafauna-centric focus of this post, but I won't promise to stop.
 
-Some of the largest marsupials from the fossil record include the aforementioned *Diprotodon* (at 2.8 tonnes, the largest marsupial ever) and other giant wombats, which are the only marsupials known to have seasonally migrated. There's also *Palorchestes*, which would been a sort of marsupial equivalent to the placental chalicotheres (more on them later)--top browsing herbivores with long arms, long claws, and short back legs, good at reaching up into trees.
+Some of the largest marsupials from the fossil record include the aforementioned *Diprotodon* (at 2.8 tonnes, the largest marsupial ever) and other giant wombats, which are the only marsupials known to have seasonally migrated. There's also *Palorchestes*, which would've been a sort of marsupial equivalent to the placental chalicotheres (more on them later)--top browsing herbivores with long arms, long claws, and short back legs, good at reaching up into trees.
 
 {% include image-caption.html imageurl="/assets/images/posts/diprotodon.jpg" title="diprotodon" caption="Some Diprotodon, the hippo-sized wombat. Perhaps they're migrating." %}
 
 {% include image-caption.html imageurl="/assets/images/posts/palorchestes.jpg" title="palorchestes" caption="Palorchestes's body plan may look weird today, but it must have been effective in the past, since chalicotheres convergently arrived at the same shape." %}
 
-Some notable large marsupial carnivores include *Thylacoleo*, a wombat that wanted to be a lion, and *Thylacinus*, the thylacine, a numbat that wanted to be a wolf.  The latter was a bit more conservative in its approach, while the former was one of the most bizarrely specialized carnivores ever to live. Unlike most carnivores, which turn their canine teeth into weapons, *Thylacoleo* used its incisors for grabbing large prey and its bolt-cutter-like carnassial premolars for quickly dispatching them. It also had opposable thumbs with a large claw, for grappling with large prey.  It was so specialized that it may have been unable to catch any small prey.  *Thylacoleo* alos had the strongest bite of any mammal--not just of any marsupial, but any *mammal*. Maybe we should call lions "placental *Thylacoleo*" instead!
+Some notable large marsupial carnivores include *Thylacoleo*, a wombat that wanted to be a lion, and *Thylacinus*, the thylacine, a numbat that wanted to be a wolf.  The latter was a bit more conservative in its approach, while the former was one of the most bizarrely specialized carnivores ever to live. Unlike most carnivores, which turn their canine teeth into weapons, *Thylacoleo* used its incisors for grabbing large prey and its bolt-cutter-like carnassial premolars for quickly dispatching them. It also had opposable thumbs with a large claw, for grappling with large prey.  It was so specialized that it may have been unable to catch any small prey.  *Thylacoleo* also had the strongest bite of any mammal--not just of any marsupial, but any *mammal*. Maybe we should call lions "placental *Thylacoleo*" instead!
 
 {% include image-caption.html imageurl="/assets/images/posts/thylacoleo.jpg" title="thylacoleo" caption="Thylacoleo, showing off its strange pointed incisors." %}
 
