--- a/_posts/2021-10-20-botober.md
+++ b/_posts/2021-10-20-botober.md
@@ -75,3 +75,15 @@ Incidentally, I've drawn a *Stegosaurus* in approximately this pose before, two 
 ![8-legged-cat](/assets/images/posts/8-legged-cat.png)
 
 The remarkable little Indopacific mimic octopus is known to impersonate a variety of creatures in the wild, including sea snakes, lionfish, flatfish, stingrays, tunicates, and more. Who's to say it couldn't learn 'cat' if given the chance?
+
+### Day 9: Bearllionaire
+
+![bearllionaire](/assets/images/posts/bearllionaire.jpg)
+
+In what was perhaps the high point of American reality television, professional eater Takeru Kobayashi (representing Japan) [squared off against a Kodiak bear](https://www.youtube.com/watch?v=HgqbCq_sxmo&t=121s) (representing America, of course) to see who could eat 50 hot dogs faster. Kobayashi put up an impressive 36 by the time the bear was finished.  The following segment involved 20 midgets competing with an elephant in a tractor pull. Are you not entertained?
+
+### Day 10: Impossibly Cute Pudgy Birds
+
+![impossibly](/assets/images/posts/impossibly-cute.jpg)
+
+Somehow my attempt at "impossibly cute" looks more like a domestic dispute. Anyway, here's *Confuciusornis*, an Early Cretaceous bird from the Yixian Formation of China that was probably not a very graceful flier, but was superabundant in its environment and is known from hundreds of fossils.  The males had two long tail feathers, and we think their primary feathers were white while their upper-wing coverts were black.
